--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple CRUD API on pure Node.js",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js",
+    "start:dev": "nodemon app.js",
+    "start:prod": "webpack && node ./dist/main.bundle.js",
     "test": "jest"
   },
   "repository": {
@@ -24,7 +25,10 @@
   "homepage": "https://github.com/khiman7/simple-crud-api#readme",
   "devDependencies": {
     "jest": "^27.3.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "webpack": "^5.64.4",
+    "clean-webpack-plugin": "^4.0.0",
+    "webpack-cli": "^4.9.1"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
