--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
   },
   "homepage": "https://github.com/khiman7/simple-crud-api#readme",
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
     "jest": "^27.3.1",
     "nodemon": "^2.0.15",
+    "supertest": "^6.1.6",
     "webpack": "^5.64.4",
-    "clean-webpack-plugin": "^4.0.0",
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
